# vein-dashboard

./: .swcrc  Cargo.toml  README.md  config.toml  package.json  rspack.config.mjs  spack.config.js
.github/: funding.yml
.github/workflows/: rust.yml
assets/: app.js  index.html  input.css  style.css
src/: config.rs  error.rs  main.rs  utils.rs
src/game/: mod.rs
src/identity/: mod.rs
src/logs/: mod.rs
src/players/: mod.rs
web/: index.ts  tsconfig.json
web/app/: index.ts
web/entities/api/: index.ts
web/features/menu/ui/: index.ts
web/pages/: index.ts
web/pages/authorized/ui/: index.ts
web/pages/login-page/ui/: index.ts
web/pages/logs-page/ui/: index.ts  log-line.ts
web/pages/status-page/ui/: index.ts  vein-character-data.ts  vein-character.ts  vein-item.ts  vein-player-stat.ts  vein-player-stats.ts  vein-player.ts  vein-players.ts  vein-selected-character.ts  vein-stat.ts  vein-uptime.ts
web/shared/lib/: index.ts
