[package]
name = "vein-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
Inflector = "0.11.4"
actix = "0.13.5"
actix-web = "4.11.0"
actix-web-lab = { version = "0.24.3", features = ["spa"] }
async-process = "2.5.0"
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["into"] }
futures = "0.3.31"
futures-lite = "2.6.1"
futures-util = "0.3.31"
nutype = { version = "0.6.2", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
